add relove url loader to load images from sass

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <h2>hello man</h2>
+    <div>hello</div>
     <img width="100pX" src="assets/palestine.jpg" alt="this is palestine">
     <img src="https://logos.keycdn.com/keycdn-logo.svg" alt="">
 </body>
